--- a/examples/lora-test/lora-sender/Makefile
+++ b/examples/lora-test/lora-sender/Makefile
@@ -1,5 +1,5 @@
-APPLICATION = mpu_test
-RIOTBASE ?= $(CURDIR)/../..
+APPLICATION = lora_sender_test
+RIOTBASE ?= $(CURDIR)/../../..
 BOARD ?= stm32f4xx
 QUIET ?= 1
 
@@ -10,7 +10,11 @@ DEVELHELP ?= 1
 
 USEMODULE += xtimer
 USEMODULE += periph_dma
-USEMODULE += mpu9250
+
+DRIVER ?= sx1276
+
+# use SX1276 by default
+USEMODULE += $(DRIVER)
 
 CFLAGS += -DUART_USE_DMA
 CFLAGS += -DSPI_USE_DMA
