--- a/examples/lora-test/lora-receiver/Makefile
+++ b/examples/lora-test/lora-receiver/Makefile
@@ -1,5 +1,5 @@
-APPLICATION = mpu_test
-RIOTBASE ?= $(CURDIR)/../..
+APPLICATION = lora_receiver_test
+RIOTBASE ?= $(CURDIR)/../../..
 BOARD ?= stm32f4xx
 QUIET ?= 1
 
@@ -8,9 +8,17 @@ QUIET ?= 1
 # development process:
 DEVELHELP ?= 1
 
+USEMODULE += od
+USEMODULE += shell
+USEMODULE += shell_commands
+USEMODULE += ps
 USEMODULE += xtimer
 USEMODULE += periph_dma
-USEMODULE += mpu9250
+
+DRIVER ?= sx1276
+
+# use SX1276 by default
+USEMODULE += $(DRIVER)
 
 CFLAGS += -DUART_USE_DMA
 CFLAGS += -DSPI_USE_DMA
